# recruitment-agent

./: SETUP.md
backend/: .env.example  config.py  main.py  main_modular.py  pyproject.toml  questions.py
backend/app/: config.py  main.py
backend/app/routes/: call_routes.py  interview_routes.py  setup_routes.py
backend/app/services/: email_service.py  interview_service.py  scoring_service.py
backend/app/websocket/: conversation_handler.py
backend/routes/: call_routes.py  interview_routes.py
backend/services/: interview_service.py  scoring_service.py
backend/websocket/: conversation_handler.py
web/app/: globals.css  layout.tsx  page.tsx
web/app/setup/: page.tsx
